Switched to JDK 11 for SCRIPT compatibility